Cambios de carousel

--- a/fiesta_tematica.html
+++ b/fiesta_tematica.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css"/>
     <link rel="shortcut icon" href="images/logo_eventos_plaza2.ico"/>
   </head>
-  <body">
+  <body>
     <header class="header">
       <nav class="menu">
         <ul>
@@ -70,14 +70,41 @@
         </ul>
       </nav>
     </header>
-    <!-- Introducción a Eventos plaza-->
-    <section>
-      pequeña deccion de fiestas tematicas
-
-      los articulos
-
-    
+    <!-- Section del articulo general-->
+    <section class="presentaciones">
+      <article>
+        <img src="images/fiestas_tematicas/FIESTA TEMATICA 13.jpg" alt="imagen many a la obra" height="300">
+        <h2>Many a la obra</h2>
+        <p>Inmortaliza la fiestade tu hijo, con su personaje favorito de la TV. </p>
     </section>
+    <!-- Section de articulos individuales-->
+    <section class="contenedor articulos">
+      <article>
+        <img src="images/fiestas_tematicas/FIESTA TEMATICA 1.jpg" alt="imagen fiestas tematicas 1" width="300">
+        <h2>Velas aromatica</h2>
+        <p>Descubre las esencias que nos transportara a ese momento especial que queremos recordar.</p>
+      </article>
+
+      <article>
+        <img src="images/fiestas_tematicas/FIESTA TEMATICA 2.jpg" alt="imagen fiestas tematicas 2" width="300">
+        <h2>Los minios</h2>
+        <p>Una gelatina divertida!</p>
+      </article>
+
+      <article>
+        <img src="images/fiestas_tematicas/FIESTA TEMATICA 3.jpg" alt="imagen fiestas tematicas 3" width="300">
+        <h2>Los minios creando recuerdos.</h2>
+        <p>Crea una pandilla de minios para crear una fiesta que se inmortalice en el recuerdo!</p>
+      </article>
+
+
+      <article>
+        <img src="images/fiestas_tematicas/FIESTA TEMATICA 4.jpg" alt="imagen fiestas tematicas 4" width="300">
+        <h2>Las princesas!!!</h2>
+        <p>Siempre recordadas, ten en tu fiesta un espacio para que ellas compartan el maquillaje, el disfraz, la experenia de ser princesas un día con la ayuda de animadoras.</p>
+      </article>
+    </section>
+
 
     <footer class="header">
        <nav class="menu fotter">
