--- a/index.html
+++ b/index.html
@@ -15,55 +15,55 @@
         <ul>
           <li>
             <a href="index.html">
-              <img src="images/logo_eventos_plaza2.png" alt="logo_eventos_plaza" height="80">
+              <img src="images/logo_eventos_plaza2.png" alt="logo_eventos_plaza" height="70">
               <span>Inicio</span>
             </a>
           </li>
           <li>
             <a href="fiesta_tematica.html">
-              <img src="images/fiesta_tematica.png" alt="imagen fiestas temáticas" height="80">
+              <img src="images/fiesta_tematica.png" alt="imagen fiestas temáticas" height="70">
               <span>Fiestas</span> <span>Temáticas</span>
             </a>
           </li>          
 
           <li>
             <a href="comuniones.html">
-              <img src="images/comunion.png" alt="imagen Comuniones" height="80">
+              <img src="images/comunion.png" alt="imagen Comuniones" height="70">
               <span>Comuniones</span>
             </a>
           </li>
 
           <li>
             <a href="bodas.html">
-              <img src="images/boda.png" alt="imagen bodas" height="80">
+              <img src="images/boda.png" alt="imagen bodas" height="70">
               <span>Bodas</span>
             </a>
           </li>          
 
           <li>
             <a href="nacimientos.html">
-              <img src="images/nacimiento.png" alt="imagen nacimientos" height="80">
+              <img src="images/nacimiento.png" alt="imagen nacimientos" height="70">
               <span>Nacimientos</span>
             </a>
           </li>          
 
           <li>
             <a href="BarDulce.html">
-              <img src="images/BarDulce.png" alt="imagen del bar de dulces" height="80">
+              <img src="images/BarDulce.png" alt="imagen del bar de dulces" height="70">
               <span>Bar de dulces</span>
             </a>
           </li>
 
           <li>
             <a href="sonido.html">
-              <img src="images/sonido.png" alt="imagen sonido" height="80">
+              <img src="images/sonido.png" alt="imagen sonido" height="70">
               <span>Sonido</span>
             </a>
           </li>
 
           <li>
             <a href="escribenos.html">
-              <img src="images/contactanos.png" alt="imagen escríbenos" height="80">
+              <img src="images/contactanos.png" alt="imagen escríbenos" height="70">
               <span>Escríbenos</span>
             </a>
           </li>
@@ -72,65 +72,68 @@
       </nav>
     </header>
     <!-- Introducción a Eventos plaza-->
-    <section>
+    <section class="presentaciones">
+
+      <div class="icon icon-izq" id="left"><i class="icon icon-circle-left" onclick="prev()"></i>
+        <img class="imagen-izquierda" src="images/globo.png" alt="imagen globo" width="150">
+      </div>
 
       <div class="presentacion">
-        <img id="slider" src="images/logo_eventos_plaza2.png" height="400">
-        <div class="icon" id="left"><i class="icon icon-circle-left" onclick="prev()"></i>
-			<img class="imagen-izquierda" src="images/globo.png" alt="imagen globo" width="150">
-        </div>
-       <div class="icon" id="right"><i class="icon icon-circle-right" onclick="next()"></i>
-			<img class="imagen-derecha" src="images/serpentina2.png" alt="imagen globo" width="150">
-       </div>
-      </div>
+        <img id="slider" src="images/logo_eventos_plaza2.png" height="350">
         <h2 id="sliderHeader">Eventos Plaza</h2>
         <p id="sliderPara">Haz de tu fiesta un evento inolvidable!</p>
+      </div>
+
+      <div class="icon icon-der" id="right"><i class="icon icon-circle-right" onclick="next()"></i>
+        <img class="imagen-derecha" src="images/serpentina2.png" alt="imagen globo" width="150">
+      </div>
+
 
     </section>
 
     <footer class="header">
-       <nav class="menu fotter">
+       <nav id="footer" class="menu fotter">
        	<ul>
        		<li>
        			<a href="fiesta_tematica.html">
        				 <span>Fiestas</span> <span>Temáticas</span>
-       				<img src="images/flores_izq.png" alt="imagen flores izquirda" height="80">
+       				<img src="images/flores_izq.png" alt="imagen flores izquirda" height="70">
        			</a>
        		</li>       		
        		<li>
        			<a href="BarDulce.html">
        				<span>Bar de Dulces</span>	
-       				<img src="images/torta-mesa.png" alt="imagen torta flores" height="80">
+       				<img src="images/torta-mesa.png" alt="imagen torta flores" height="70">
        			</a>
        		</li>       		
        		<li>
        			<a href="fiesta_tematica.html">
        				 <span>Fiestas</span> <span>Temáticas</span>
-       				<img src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="80">
+       				<img src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="70">
        			</a>
        		</li>
        		<li>
        			<a href="bodas.html">
        				<span>Bodas</span>	
-       				<img src="images/boda_munecos.png" alt="imagen boda" height="80">
+       				<img src="images/boda_munecos.png" alt="imagen boda" height="70">
        			</a>
        		</li>
        		<li>
        			<a href="fiesta_tematica.html">
        				<span>Ponquet</span>	
-       				<img src="images/ponquet.png" alt="imagen ponquet" height="80">
+       				<img src="images/ponquet.png" alt="imagen ponquet" height="70">
        			</a>
        		</li>
        		<li>
        			<a href="fiesta_tematica.html">
        				<span>Cocteles</span>	
-       				<img src="images/coctel.png" alt="imagen coctel" height="80">
+       				<img src="images/coctel.png" alt="imagen coctel" height="70">
        			</a>
        		</li>
        		<li>
        			<a href="fiesta_tematica.html">
        				 <span>Fiestas</span> <span>Temáticas</span>
-       				<img src="images/flores_der.png" alt="imagen flores" height="80">
+       				<img src="images/flores_der.png" alt="imagen flores" height="70">
        			</a>
        		</li>
 
