Cambios de redes sociales

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <a href="https://www.facebook.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
         <img class=" lazyloaded" data-src="" alt="Facebook" src="images/facebook.png">
       </a>
-      <a href="https://www.instagram.com/eventosplaza2016/" target="_blank" class="site-footer__social-networks__label">
+      <a href="https://www.instagram.com/eventosplazatoledo/" target="_blank" class="site-footer__social-networks__label">
         <img class=" lazyloaded" data-src="" alt="Instagram" src="images/instagram.png"></a>
       </a>
-      <a href="https://twitter.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
+      <a href="https://twitter.com/EventosPlazaT" target="_blank" class="site-footer__social-networks__label">
           <img class=" lazyloaded" data-src="" alt="Twitter" src="images/twitter.png">
       </a>
     </div>
