Eliminar imagen en contrucción - Aumentar tamaño de iconos redessociales y espaciado

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8"/>
     <title>Eventos Plaza - Tu sueño hecho fiesta.</title>
+    <style>
+      a {
+        margin-right: 30px;
+      }
+    </style>
   </head>
+
   <body>
     <div>
     
@@ -15,21 +21,17 @@
     <div align=center>
       <img aling="center" src="images/índice.jpeg">
     </div>
-    <div align=center>
-      <img aling="center" src="images/construccion2.jpg">
-    </div>
-
-
+   
 
     <div align=center>
       <a href="https://www.facebook.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
-        <img class=" lazyloaded" data-src="" alt="Facebook" src="images/facebook.png">
+        <img class=" lazyloaded" data-src="" alt="Facebook" src="images/facebook.png" width="80">
       </a>
       <a href="https://www.instagram.com/eventosplazatoledo/" target="_blank" class="site-footer__social-networks__label">
-        <img class=" lazyloaded" data-src="" alt="Instagram" src="images/instagram.png"></a>
+        <img class=" lazyloaded" data-src="" alt="Instagram" src="images/instagram.png" width="80"></a>
       </a>
       <a href="https://twitter.com/EventosPlazaT" target="_blank" class="site-footer__social-networks__label">
-          <img class=" lazyloaded" data-src="" alt="Twitter" src="images/twitter.png">
+          <img class=" lazyloaded" data-src="" alt="Twitter" src="images/twitter.png" width="80">
       </a>
     </div>
 
