Inclusión del icono a la pestaña

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <link rel="icon" href="images/logo_eventos_plaza2.png" type="image/png" sizes="16x16"> 
     <title>Eventos Plaza - Tu sueño hecho fiesta.</title>
     <style>
       a {
