Cambio de fuente

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8"/>
     <link rel="icon" href="images/logo_eventos_plaza2.ico" type="image/png" sizes="16x16"> 
-    <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet"> 
     <title>Eventos Plaza - Tu sueño hecho fiesta.</title>
     <style>
       
       body {
-        font-family: 'Clicker Script', cursive;
+        font-family: 'Dancing Script', cursive;
         color:brown;
       }
 
@@ -57,6 +57,7 @@
           Has click aquí para visualizar nuestra galería de recuerdos.
         </a>
       </h2>
+      
       <figure>
         <a href="https://www.facebook.com/pg/eventosplazag/photos/?ref=page_internal"  target="_blank">
           <img src="images/galery.jpg" alt="imagen de gareria" width="600">
