--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8"/>
     <link rel="icon" href="images/logo_eventos_plaza2.ico" type="image/png" sizes="16x16"> 
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Tangerine:400,700" rel="stylesheet"> 
     <title>Eventos Plaza - Tu sueño hecho fiesta.</title>
     <style>
       
       body {
-        font-family: 'Dancing Script', cursive;
+        font-family: 'Tangerine', cursive;
         color:brown;
       }
 
