--- a/fiesta_tematica.html
+++ b/fiesta_tematica.html
@@ -78,52 +78,51 @@
 
     <section class="presentaciones">
       <article>
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 13.jpg" alt="imagen many a la obra" width="1000">
+        <img src="images/fiestas_tematicas/FIESTA TEMATICA 13.jpg" alt="imagen many a la obra" width="700">
         <h2>Many a la obra</h2>
-        <p>Inmortaliza la fiestade tu hijo, con su personaje favorito de la TV. </p>
+        <p>Mani Manitas. Crea una fiesta inolvidable con tus personajes favoritos.</p>
     </section>
     <!-- Section de articulos individuales-->
     <section class="contenedor articulos">
       
-      <article class="contenedor articulo">
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 1.jpg" alt="imagen fiestas tematicas 1" width="300">
+      <article class="articulo">
+        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 1.jpg" alt="imagen fiestas tematicas" width="300">
         <h2>Velas aromatica</h2>
-        <p>Descubre las esencias que nos transportara a ese momento especial que queremos recordar.</p>
+        <p>Fiestas de Unicornios y otros animales asombrosos.</p>
       </article>
 
       <article class="articulo">
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 3.jpg" alt="imagen fiestas tematicas 3" width="300">
+        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 3.jpg" alt="imagen fiestas tematicas" width="300">
         <h2>Los minios creando recuerdos.</h2>
-        <p>Crea una pandilla de minios para crear una fiesta que se inmortalice en el recuerdo!</p>
+        <p>Crea una pandilla de Minions y tendrás una fiesta muy divertida.</p>
       </article>
 
-
       <article class="articulo">
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 5.jpg" alt="imagen fiestas tematicas 4" width="300">
-        <h2>Las princesas!!!</h2>
-        <p>Siempre recordadas, ten en tu fiesta un espacio para que ellas compartan el maquillaje, el disfraz, la experenia de ser princesas un día con la ayuda de animadoras.</p>
+        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 5.jpg" alt="imagen fiestas tematica" width="300">
+        <h2>Princesas y Caballeros.</h2>
+        <p>Regala un día especial junto a las Princesas de tus cuentos. Tendrán la oportunidad de compartir y disfrutar con ellas. Maquillaje, baile, decoración de cup cake. Pasarán un día de cuento de hadas. </p>
       </article>
    
       <article class="articulo">
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 10.jpg" alt="imagen fiestas tematicas " width="300">
-        <h2>Dinosaurios!!!</h2>
-        <p>Tus animales preferidos de la prehistoria, ahora juega contigo en tu fiesta.</p>
+        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 10.jpg" alt="imagen fiestas tematicas" width="300">
+        <h2>Dinosaurios. Una fiesta de la Prehistoria.</h2>
+        <p>Una fiesta con tus animales prehistóricos. Decoración, mesa de postres, tarta. </p>
       </article>      
 
       <article class="articulo">
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 12.jpg" alt="imagen fiestas tematicas " width="300">
-        <h2>Mariposas!!!</h2>
-        <p>Recrea tufiesta con ingreible mariposas que haran que tu imaginación te lleve a lugares increible.</p>
+        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 12.jpg" alt="imagen fiestas tematicas" width="300">
+        <h2>Mariposas y animales de jardín.</h2>
+        <p>Si quieres algo diferente, algo original, la mariposas y animales del jardín  nunca te harán quedar mal.</p>
       </article>
 
       <article class="articulo">
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 15.JPG" alt="imagen fiestas tematicas " width="300">
-        <h2>Plantas Vs Zombies!!!</h2>
-        <p>Traido de los video juegos, Plantas Vs. Zombies con increible actividades qu tus hijos no olvidaran.</p>
+        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 15.JPG" alt="imagen fiestas tematicas" width="300">
+        <h2>Plantas Vs Zombies.</h2>
+        <p>Traído de los video juegos, Plantas Vs. Zombies con increíbles y originales  actividades que tus hijos no olvidaran.</p>
       </article>
 
       <article class="articulo">
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 16.jpg" alt="imagen fiestas tematicas " width="300">
+        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 16.jpg" alt="imagen fiestas tematicas" width="300">
         <h2>Sevillanas!!!</h2>
         <p>Decora tu fiesta al mejor estilo Sevillano y recuerda esos momentos con las mejores canciones.</p>
       </article>
@@ -181,6 +180,14 @@
        </nav>
     </footer>
 
+    <script src="js/blazy.min.js"></script>
+    <script>
+      ;(function() {
+          // Initialize
+          var bLazy = new Blazy();
+          selector: 'img' // all images
+      })();
+    </script>
     <script type="text/javascript" src="js/script.js"></script>
 
   </body>
