Inclusión de fuentes y correcciones de css

--- a/fiesta_tematica.html
+++ b/fiesta_tematica.html
@@ -21,7 +21,7 @@
           <li>
             <a href="fiesta_tematica.html">
               <img src="images/fiesta_tematica.png" alt="imagen fiestas temáticas" height="80">
-              <span>Fiestas</span> <span>Temáticas</span>
+              <span>Fiestas Temáticas</span>
             </a>
           </li>          
 
@@ -135,7 +135,7 @@
         <ul>
           <li>
             <a href="fiesta_tematica.html">
-               <span>Fiestas</span> <span>Temáticas</span>
+               <span>Fiestas Temáticas</span>
               <img src="images/flores_izq.png" alt="imagen flores izquirda" height="80">
             </a>
           </li>           
@@ -147,7 +147,7 @@
           </li>           
           <li>
             <a href="fiesta_tematica.html">
-               <span>Fiestas</span> <span>Temáticas</span>
+               <span>Fiestas Temáticas</span>
               <img src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="80">
             </a>
           </li>
@@ -171,7 +171,7 @@
           </li>
           <li>
             <a href="fiesta_tematica.html">
-               <span>Fiestas</span> <span>Temáticas</span>
+               <span>Fiestas Temáticas</span>
               <img src="images/flores_der.png" alt="imagen flores" height="80">
             </a>
           </li>
