--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li>
             <a href="fiesta_tematica.html">
               <img src="images/fiesta_tematica.png" alt="imagen fiestas temáticas" height="70">
-              <span>Fiestas</span> <span>Temáticas</span>
+              <span>Fiestas Temáticas</span>
             </a>
           </li>          
 
@@ -65,7 +65,7 @@
           <li>
             <a href="escribenos.html">
               <img src="images/contactanos.png" alt="imagen escríbenos" height="70">
-              <span>Escríbenos</span>
+              <span>Contáctanos</span>
             </a>
           </li>
 
@@ -80,7 +80,7 @@
 
       <div class="presentacion">
         <div class="left" id="left"><i class="icon icon-circle-left" onclick="prev()"></i></div>
-        <img class="b-lazy" id="slider" src= "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/logo_eventos_plaza2.png" height="400">
+        <img class="b-lazy" id="slider" src= "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/logo_eventos_plaza2.png" width="300">
         <div class="right" id="right"><i class="icon icon-circle-right" onclick="next()"></i>  </div>
         <h2 id="sliderHeader">Eventos Plaza</h2>
         <p id="sliderPara">Haz de tu fiesta un evento inolvidable!</p>
@@ -103,7 +103,7 @@
        	<ul>
        		<li>
        			<a href="fiesta_tematica.html">
-       				 <span>Fiestas</span> <span>Temáticas</span>
+       				 <span>Fiestas Temáticas</span>
        				<img src="images/flores_izq.png" alt="imagen flores izquirda" height="70">
        			</a>
        		</li>       		
@@ -115,7 +115,7 @@
        		</li>       		
        		<li>
        			<a href="fiesta_tematica.html">
-       				 <span>Fiestas</span> <span>Temáticas</span>
+       				 <span>Fiestas Temáticas</span>
        				<img src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="70">
        			</a>
        		</li>
@@ -139,7 +139,7 @@
        		</li>
        		<li>
        			<a href="fiesta_tematica.html">
-       				 <span>Fiestas</span> <span>Temáticas</span>
+       				 <span>Fiestas Temáticas</span>
        				<img src="images/flores_der.png" alt="imagen flores" height="70">
        			</a>
        		</li>
