Página de contáctos y páginas en construcción.

--- a/comuniones.html
+++ b/comuniones.html
@@ -63,7 +63,7 @@
           <li>
             <a href="contactanos.html">
               <img src="images/contactanos.png" alt="imagen escríbenos" height="80">
-              <span>Escríbenos</span>
+              <span>Contáctanos</span>
             </a>
           </li>
 
@@ -73,64 +73,16 @@
     <!-- Section del articulo general-->
 
   <div class="contenedor">
-    <h1>Fiestas Tematicas</h1>
+    <h1>Comuniones</h1>
   </div>
 
     <section class="presentaciones">
-      <article>
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 13.jpg" alt="imagen many a la obra" width="700">
-        <h2>Many a la obra</h2>
-        <p>Mani Manitas. Crea una fiesta inolvidable con tus personajes favoritos.</p>
-      </article>
 
+        <!-- <img src="images/fiestas_tematicas/FIESTA TEMATICA 13.jpg" alt="imagen many a la obra" width="700"> 
+        <h2>Many a la obra</h2>-->
+        <p>En Construcción.</p>
     </section>
-    <!-- Section de articulos individuales-->
-    <section class="contenedor articulos">
-      
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 1.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Velas aromatica</h2>
-        <p>Fiestas de Unicornios y otros animales asombrosos.</p>
-      </article>
-
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 3.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Los minios creando recuerdos.</h2>
-        <p>Crea una pandilla de Minions y tendrás una fiesta muy divertida.</p>
-      </article>
-
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 5.jpg" alt="imagen fiestas tematica" width="300">
-        <h2>Princesas y Caballeros.</h2>
-        <p>Regala un día especial junto a las Princesas de tus cuentos. Tendrán la oportunidad de compartir y disfrutar con ellas. Maquillaje, baile, decoración de cup cake. Pasarán un día de cuento de hadas. </p>
-      </article>
-   
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 10.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Dinosaurios. Una fiesta de la Prehistoria.</h2>
-        <p>Una fiesta con tus animales prehistóricos. Decoración, mesa de postres, tarta. </p>
-      </article>      
-
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 12.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Mariposas y animales de jardín.</h2>
-        <p>Si quieres algo diferente, algo original, la mariposas y animales del jardín  nunca te harán quedar mal.</p>
-      </article>
-
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 15.JPG" alt="imagen fiestas tematicas" width="300">
-        <h2>Plantas Vs Zombies.</h2>
-        <p>Traído de los video juegos, Plantas Vs. Zombies con increíbles y originales  actividades que tus hijos no olvidaran.</p>
-      </article>
-
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 16.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Sevillanas!!!</h2>
-        <p>Decora tu fiesta al mejor estilo Sevillano y recuerda esos momentos con las mejores canciones.</p>
-      </article>
-
-    </section>
-
+    
 
     <footer class="header">
        <nav class="menu fotter">
