--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </li>
 
           <li>
-            <a href="escribenos.html">
+            <a href="contactanos.html">
               <img src="images/contactanos.png" alt="imagen escríbenos" height="70">
               <span>Contáctanos</span>
             </a>
