--- a/contactanos.html
+++ b/contactanos.html
@@ -63,7 +63,7 @@
           <li>
             <a href="contactanos.html">
               <img src="images/contactanos.png" alt="imagen escríbenos" height="80">
-              <span>Escríbenos</span>
+              <span>Contáctanos</span>
             </a>
           </li>
 
@@ -73,63 +73,34 @@
     <!-- Section del articulo general-->
 
   <div class="contenedor">
-    <h1>Fiestas Tematicas</h1>
+    <h1>Contáctanos</h1>
   </div>
 
     <section class="presentaciones">
-      <article>
-        <img src="images/fiestas_tematicas/FIESTA TEMATICA 13.jpg" alt="imagen many a la obra" width="700">
-        <h2>Many a la obra</h2>
-        <p>Mani Manitas. Crea una fiesta inolvidable con tus personajes favoritos.</p>
-      </article>
 
-    </section>
-    <!-- Section de articulos individuales-->
-    <section class="contenedor articulos">
-      
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 1.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Velas aromatica</h2>
-        <p>Fiestas de Unicornios y otros animales asombrosos.</p>
-      </article>
-
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 3.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Los minios creando recuerdos.</h2>
-        <p>Crea una pandilla de Minions y tendrás una fiesta muy divertida.</p>
-      </article>
-
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 5.jpg" alt="imagen fiestas tematica" width="300">
-        <h2>Princesas y Caballeros.</h2>
-        <p>Regala un día especial junto a las Princesas de tus cuentos. Tendrán la oportunidad de compartir y disfrutar con ellas. Maquillaje, baile, decoración de cup cake. Pasarán un día de cuento de hadas. </p>
-      </article>
+      <h2>En nuestras redes sociales.</h2>
+      <a href="https://www.facebook.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
+        <img class=" lazyloaded" data-src="" alt="Facebook" src="images/facebook.png" width="50">
+      </a>
+      <a href="https://www.instagram.com/eventosplazatoledo/" target="_blank" class="site-footer__social-networks__label">
+        <img class=" lazyloaded" data-src="" alt="Instagram" src="images/instagram.png" width="50"></a>
+      </a>
+      <a href="https://twitter.com/EventosPlazaT" target="_blank" class="site-footer__social-networks__label">
+          <img class=" lazyloaded" data-src="" alt="Twitter" src="images/twitter.png" width="50">
+      </a>
    
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 10.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Dinosaurios. Una fiesta de la Prehistoria.</h2>
-        <p>Una fiesta con tus animales prehistóricos. Decoración, mesa de postres, tarta. </p>
-      </article>      
+    <h2>En nuestra tienda.</h2>
+   
+      <a href="tel:+34925210553"><strong>Teléfono de tienda:</strong> <span>+34 925210553</span></a><br><a href="tel:+34639177061"><strong>Teléfono de contacto:</strong> <span>+34 639177061</span></a><br>
+      <a href="mailto:eventosplaza2016@gmail.com"><strong>E-mail:</strong> <span>eventosplaza2016@gmail.com</span></a><br>
+      <p><strong>Dirección:</strong><span>calle travesía de Colombia 11, Santa Teresa, Toledo. 45004</span></p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1ses-419!2sve!4v1478558334885!6m8!1m7!1sYRJdEx4eUbxmBXoOePuQZg!2m2!1d39.86775418793033!2d-4.032397335465731!3f172.3788070430413!4f-0.30893964574396193!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 12.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Mariposas y animales de jardín.</h2>
-        <p>Si quieres algo diferente, algo original, la mariposas y animales del jardín  nunca te harán quedar mal.</p>
-      </article>
-
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 15.JPG" alt="imagen fiestas tematicas" width="300">
-        <h2>Plantas Vs Zombies.</h2>
-        <p>Traído de los video juegos, Plantas Vs. Zombies con increíbles y originales  actividades que tus hijos no olvidaran.</p>
-      </article>
-
-      <article class="articulo">
-        <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 16.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Sevillanas!!!</h2>
-        <p>Decora tu fiesta al mejor estilo Sevillano y recuerda esos momentos con las mejores canciones.</p>
-      </article>
 
     </section>
+    
+
+
 
 
     <footer class="header">
