--- a/BarDulce.html
+++ b/BarDulce.html
@@ -72,9 +72,9 @@
     </header>
     <!-- Section del articulo general-->
 
-  <div class="contenedor">
-    <h1>Bar de dulces</h1>
-  </div>
+    <div class="contenedor">
+      <h1>Bar de dulces</h1>
+    </div>
 
     <section class="presentaciones">
      
@@ -83,57 +83,55 @@
         <p>En Construcción.</p>
     </section>
     
-
     <footer class="header">
-       <nav class="menu fotter">
+       <nav id="footer" class="menu fotter">
         <ul>
           <li>
             <a href="fiesta_tematica.html">
                <span>Fiestas Temáticas</span>
-              <img src="images/flores_izq.png" alt="imagen flores izquirda" height="80">
+              <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/flores_izq.png" alt="imagen flores izquirda" height="70">
             </a>
           </li>           
           <li>
             <a href="BarDulce.html">
               <span>Bar de Dulces</span>  
-              <img src="images/torta-mesa.png" alt="imagen torta flores" height="80">
+              <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/torta-mesa.png" alt="imagen torta flores" height="70">
             </a>
           </li>           
           <li>
             <a href="fiesta_tematica.html">
                <span>Fiestas Temáticas</span>
-              <img src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="80">
+              <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="70">
             </a>
           </li>
           <li>
             <a href="bodas.html">
               <span>Bodas</span>  
-              <img src="images/boda_munecos.png" alt="imagen boda" height="80">
+              <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/boda_munecos.png" alt="imagen boda" height="70">
             </a>
           </li>
           <li>
             <a href="fiesta_tematica.html">
               <span>Ponquet</span>  
-              <img src="images/ponquet.png" alt="imagen ponquet" height="80">
+              <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/ponquet.png" alt="imagen ponquet" height="70">
             </a>
           </li>
           <li>
             <a href="fiesta_tematica.html">
               <span>Cocteles</span> 
-              <img src="images/coctel.png" alt="imagen coctel" height="80">
+              <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/coctel.png" alt="imagen coctel" height="70">
             </a>
           </li>
           <li>
             <a href="fiesta_tematica.html">
                <span>Fiestas Temáticas</span>
-              <img src="images/flores_der.png" alt="imagen flores" height="80">
+              <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/flores_der.png" alt="imagen flores" height="70">
             </a>
           </li>
 
         </ul>
        </nav>
     </footer>
-
     <script src="js/blazy.min.js"></script>
     <script>
       ;(function() {
