--- a/sonido.html
+++ b/sonido.html
@@ -76,76 +76,72 @@
     <h1>Sonido</h1>
   </div>
 
-    <section class="presentaciones">
-      <article>
-        <!-- <img src="images/fiestas_tematicas/FIESTA TEMATICA 13.jpg" alt="imagen many a la obra" width="700"> 
-        <h2>Many a la obra</h2>-->
-        <p>En Construcción.</p>
-    </section>
-    
+  <section class="presentaciones">
 
-    </section>
+      <!-- <img src="images/fiestas_tematicas/FIESTA TEMATICA 13.jpg" alt="imagen many a la obra" width="700"> 
+      <h2>Many a la obra</h2>-->
+      <p>En Construcción.</p>
 
+  </section>
+  
+  <footer class="header">
+     <nav id="footer" class="menu fotter">
+      <ul>
+        <li>
+          <a href="fiesta_tematica.html">
+             <span>Fiestas Temáticas</span>
+            <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/flores_izq.png" alt="imagen flores izquirda" height="70">
+          </a>
+        </li>           
+        <li>
+          <a href="BarDulce.html">
+            <span>Bar de Dulces</span>  
+            <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/torta-mesa.png" alt="imagen torta flores" height="70">
+          </a>
+        </li>           
+        <li>
+          <a href="fiesta_tematica.html">
+             <span>Fiestas Temáticas</span>
+            <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="70">
+          </a>
+        </li>
+        <li>
+          <a href="bodas.html">
+            <span>Bodas</span>  
+            <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/boda_munecos.png" alt="imagen boda" height="70">
+          </a>
+        </li>
+        <li>
+          <a href="fiesta_tematica.html">
+            <span>Ponquet</span>  
+            <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/ponquet.png" alt="imagen ponquet" height="70">
+          </a>
+        </li>
+        <li>
+          <a href="fiesta_tematica.html">
+            <span>Cocteles</span> 
+            <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/coctel.png" alt="imagen coctel" height="70">
+          </a>
+        </li>
+        <li>
+          <a href="fiesta_tematica.html">
+             <span>Fiestas Temáticas</span>
+            <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/flores_der.png" alt="imagen flores" height="70">
+          </a>
+        </li>
 
-    <footer class="header">
-       <nav class="menu fotter">
-        <ul>
-          <li>
-            <a href="fiesta_tematica.html">
-               <span>Fiestas Temáticas</span>
-              <img src="images/flores_izq.png" alt="imagen flores izquirda" height="80">
-            </a>
-          </li>           
-          <li>
-            <a href="BarDulce.html">
-              <span>Bar de Dulces</span>  
-              <img src="images/torta-mesa.png" alt="imagen torta flores" height="80">
-            </a>
-          </li>           
-          <li>
-            <a href="fiesta_tematica.html">
-               <span>Fiestas Temáticas</span>
-              <img src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="80">
-            </a>
-          </li>
-          <li>
-            <a href="bodas.html">
-              <span>Bodas</span>  
-              <img src="images/boda_munecos.png" alt="imagen boda" height="80">
-            </a>
-          </li>
-          <li>
-            <a href="fiesta_tematica.html">
-              <span>Ponquet</span>  
-              <img src="images/ponquet.png" alt="imagen ponquet" height="80">
-            </a>
-          </li>
-          <li>
-            <a href="fiesta_tematica.html">
-              <span>Cocteles</span> 
-              <img src="images/coctel.png" alt="imagen coctel" height="80">
-            </a>
-          </li>
-          <li>
-            <a href="fiesta_tematica.html">
-               <span>Fiestas Temáticas</span>
-              <img src="images/flores_der.png" alt="imagen flores" height="80">
-            </a>
-          </li>
-
-        </ul>
-       </nav>
-    </footer>
-
-    <script src="js/blazy.min.js"></script>
-    <script>
-      ;(function() {
-          // Initialize
-          var bLazy = new Blazy();
-          selector: 'img' // all images
-      })();
-    </script>
-    <script type="text/javascript" src="js/script.js"></script>
+      </ul>
+     </nav>
+  </footer>
+  <script src="js/blazy.min.js"></script>
+  <script>
+    ;(function() {
+        // Initialize
+        var bLazy = new Blazy();
+        selector: 'img' // all images
+    })();
+  </script>
+  <script type="text/javascript" src="js/script.js"></script>
 
   </body>
 </html>
