Arreglos del carusel

--- a/fiesta_tematica.html
+++ b/fiesta_tematica.html
@@ -89,7 +89,7 @@
       
       <article class="articulo">
         <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 1.jpg" alt="imagen fiestas tematicas" width="300">
-        <h2>Velas aromatica</h2>
+        <h2>Velas aromáticas</h2>
         <p>Fiestas de Unicornios y otros animales asombrosos.</p>
       </article>
 
