--- a/fiesta_tematica.html
+++ b/fiesta_tematica.html
@@ -73,7 +73,7 @@
     <!-- Section del articulo general-->
 
     <div class="contenedor">
-      <h1>Fiestas Tematicas</h1>
+      <h1>Fiestas Temáticas</h1>
     </div>
 
     <section class="presentaciones">
