cambio de imagen frontal de la tienda

--- a/contactanos.html
+++ b/contactanos.html
@@ -94,7 +94,8 @@
       <a href="tel:+34925210553"><strong>Teléfono de tienda:</strong> <span>+34 925210553</span></a><br><a href="tel:+34639177061"><strong>Teléfono de contacto:</strong> <span>+34 639177061</span></a><br>
       <a href="mailto:eventosplaza2016@gmail.com"><strong>E-mail:</strong> <span>eventosplaza2016@gmail.com</span></a><br>
       <p><strong>Dirección:</strong><span>calle travesía de Colombia 11, Santa Teresa, Toledo. 45004</span></p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1ses-419!2sve!4v1478558334885!6m8!1m7!1sYRJdEx4eUbxmBXoOePuQZg!2m2!1d39.86775418793033!2d-4.032397335465731!3f172.3788070430413!4f-0.30893964574396193!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <img src="images/carousel-tienda.jpg" alt="imagen frontal de la tienda" width="600">
+      
 
 
     </section>
