cambio de candy bar y compresion de imagenes

--- a/bodas.html
+++ b/bodas.html
@@ -47,9 +47,9 @@
           </li>          
 
           <li>
-            <a href="BarDulce.html">
-              <img src="images/BarDulce.png" alt="imagen del bar de dulces" height="80">
-              <span>Bar de dulces</span>
+            <a href="candybar.html">
+              <img src="images/candybar.png" alt="imagen del candy bar" height="80">
+              <span>Candy Bar</span>
             </a>
           </li>
 
@@ -93,8 +93,8 @@
             </a>
           </li>           
           <li>
-            <a href="BarDulce.html">
-              <span>Bar de Dulces</span>  
+            <a href="candybar.html">
+              <span>Candy Bar</span>  
               <img src="images/torta-mesa.png" alt="imagen torta flores" height="80">
             </a>
           </li>           
