--- a/candybar.html
+++ b/candybar.html
@@ -47,9 +47,9 @@
           </li>          
 
           <li>
-            <a href="BarDulce.html">
-              <img src="images/BarDulce.png" alt="imagen del bar de dulces" height="80">
-              <span>Bar de dulces</span>
+            <a href="candybar.html">
+              <img src="images/candybar.png" alt="imagen del candy bar" height="80">
+              <span>Candy Bar</span>
             </a>
           </li>
 
@@ -73,7 +73,7 @@
     <!-- Section del articulo general-->
 
     <div class="contenedor">
-      <h1>Bar de dulces</h1>
+      <h1>Candy Bar</h1>
     </div>
 
     <section class="presentaciones">
@@ -93,8 +93,8 @@
             </a>
           </li>           
           <li>
-            <a href="BarDulce.html">
-              <span>Bar de Dulces</span>  
+            <a href="candybar.html">
+              <span>Candy Bar</span>  
               <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/torta-mesa.png" alt="imagen torta flores" height="70">
             </a>
           </li>           
