--- a/nacimientos.html
+++ b/nacimientos.html
@@ -47,9 +47,9 @@
           </li>          
 
           <li>
-            <a href="BarDulce.html">
-              <img src="images/BarDulce.png" alt="imagen del bar de dulces" height="80">
-              <span>Bar de dulces</span>
+            <a href="candybar.html">
+              <img src="images/candybar.png" alt="imagen del candy bar" height="80">
+              <span>Candy Bar</span>
             </a>
           </li>
 
@@ -95,8 +95,8 @@
             </a>
           </li>           
           <li>
-            <a href="BarDulce.html">
-              <span>Bar de Dulces</span>  
+            <a href="candybar.html">
+              <span>Candy Bar</span>  
               <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/torta-mesa.png" alt="imagen torta flores" height="70">
             </a>
           </li>           
