bug en Contáctanos

--- a/fiesta_tematica.html
+++ b/fiesta_tematica.html
@@ -63,7 +63,7 @@
           <li>
             <a href="contactanos.html">
               <img src="images/contactanos.png" alt="imagen escríbenos" height="80">
-              <span>Escríbenos</span>
+              <span>Contáctanos</span>
             </a>
           </li>
 
