--- a/fiesta_tematica.html
+++ b/fiesta_tematica.html
@@ -86,43 +86,43 @@
       <section class="contenedor articulos">
         
         <article class="articulo">
-          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 1.jpg" alt="imagen fiestas tematicas" width="300">
+          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 1.jpg" alt="imagen fiestas tematicas" width="300" height="200">
           <h2>Velas aromáticas</h2>
           <p>Fiestas de Unicornios y otros animales asombrosos.</p>
         </article>
 
         <article class="articulo">
-          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 3.jpg" alt="imagen fiestas tematicas" width="300">
+          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 3.jpg" alt="imagen fiestas tematicas" width="300" height="200">
           <h2>Los minios creando recuerdos.</h2>
           <p>Crea una pandilla de Minions y tendrás una fiesta muy divertida.</p>
         </article>
 
         <article class="articulo">
-          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 5.jpg" alt="imagen fiestas tematica" width="300">
+          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 5.jpg" alt="imagen fiestas tematica" width="300" height="200">
           <h2>Princesas y Caballeros.</h2>
           <p>Regala un día especial junto a las Princesas de tus cuentos. Tendrán la oportunidad de compartir y disfrutar con ellas. Maquillaje, baile, decoración de cup cake. Pasarán un día de cuento de hadas. </p>
         </article>
      
         <article class="articulo">
-          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 10.jpg" alt="imagen fiestas tematicas" width="300">
+          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 10.jpg" alt="imagen fiestas tematicas" width="300" height="200">
           <h2>Dinosaurios. Una fiesta de la Prehistoria.</h2>
           <p>Una fiesta con tus animales prehistóricos. Decoración, mesa de postres, tarta. </p>
         </article>      
 
         <article class="articulo">
-          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 12.jpg" alt="imagen fiestas tematicas" width="300">
+          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 12.jpg" alt="imagen fiestas tematicas" width="300" height="200">
           <h2>Mariposas y animales de jardín.</h2>
           <p>Si quieres algo diferente, algo original, la mariposas y animales del jardín  nunca te harán quedar mal.</p>
         </article>
 
         <article class="articulo">
-          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 15.JPG" alt="imagen fiestas tematicas" width="300">
+          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 15.JPG" alt="imagen fiestas tematicas" width="300" height="200">
           <h2>Plantas Vs Zombies.</h2>
           <p>Traído de los video juegos, Plantas Vs. Zombies con increíbles y originales  actividades que tus hijos no olvidaran.</p>
         </article>
 
         <article class="articulo">
-          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 16.jpg" alt="imagen fiestas tematicas" width="300">
+          <img class="b-lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/fiestas_tematicas/FIESTA TEMATICA 16.jpg" alt="imagen fiestas tematicas" width="300" height="200">
           <h2>Sevillanas!!!</h2>
           <p>Decora tu fiesta al mejor estilo Sevillano y recuerda esos momentos con las mejores canciones.</p>
         </article>
