alinear fotos y margen en articulo principal

--- a/fiesta_tematica.html
+++ b/fiesta_tematica.html
@@ -77,7 +77,7 @@
     </div>
 
     <section class="presentaciones">
-      <article>
+      <article class="principal">
         <img src="images/fiestas_tematicas/FIESTA TEMATICA 13.jpg" alt="imagen many a la obra" width="700">
         <h2>Many a la obra</h2>
         <p>Mani Manitas. Crea una fiesta inolvidable con tus personajes favoritos.</p>
